# nozzle-spout-syphon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml
docs/: spout-runtime-research.md  syphon-runtime-research.md
scripts/: package-release-windows.ps1  package-release.sh  verify-package.sh
src/: main.cpp
src/app/: app_config.cpp  app_config.hpp  source_selection.cpp  source_selection.hpp  status_report.cpp  status_report.hpp
src/platform/macos/: syphon_bridge.mm
src/platform/windows/: spout_bridge.cpp
tests/: test_main.cpp
